crates/ui/src/snapshots/cctop_ui__snapshot__settings_cloudflare_connected_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Settings ─────────────────────────────────────────────────────── /cloudflare ╮
│  File ~/.config/cctop/config.toml                                            │
│                                                                              │
│config.toml · [tunnel]                                                        │
│  cloudflare        cctop.example.c… * Your Cloudflare tunnel: links that stay│
│                                                                              │
│  ↵ change   ⌫ reset   e open the file in an editor   Esc back to the table   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
/ Filter ↵ Change ⌫ Reset e Edit file , Back Alt+←→ Tabs F1 Help        ⧉ share
