crates/ui/src/snapshots/cctop_ui__snapshot__settings_filtered_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Settings ─────────────────────────────────────────────────────── /alert when ╮
│  File ~/.config/cctop/config.toml                                            │
│                                                                              │
│config.toml · [settings]                                                      │
│  notify            [ ]              Bell + desktop alert when a session need…│
│  alert_cost        0                Alert when a session's cost passes $X    │
│  alert_burn        0                Alert when a session burns over $X an ho…│
│  alert_today       0                Alert when today's spend passes $X       │
│  alert_errors      0                Alert when X% of 10m of tool calls fail …│
│  alert_stall       0                Alert when a working agent writes nothin…│
│                                                                              │
│  ↵ change   ⌫ reset   e open the file in an editor   Esc back to the table   │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
/ Filter ↵ Change ⌫ Reset e Edit file , Back Alt+←→ Tabs F1 Help        ⧉ share
