crates/ui/src/snapshots/cctop_ui__snapshot__settings_keys_styles.snap
---
source: crates/ui/src/snapshot.rs
expression: styles(&buffer)
---
AAAAAAAAAAAAABCCCCCCCCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBDDDDDDDDDD
BEEEEEEEEEEBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BCCCCCCCCCCCFFFFFFFFFFFFF..............................G..CCCCCCCCCCHHHHHHIIIAHHHHHHHHHHHHHHHAAAAAIIIIIIIIIIIIIIIIIAAAAB
BCCCCCCCCCCCFFFFFFFFFFFFF..............................G..CCCCCCCCCCJAAAKKKKKKAAAAAAAAAAA..............................B
BCCCCCCCCCCCFFFFFFFFFFFFF..............................G..CCCCCCCCCCJJJJJJJ...................G........................B
BCCCCCCCCCCCFFFFFFFFFFFFFAAAAAAAAAAAAAAAAAAAA.............CCCCCCCCCCJJJJJJAAAAAAAAAAAAAAAAAAAAAA.......................B
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
HEEEEEEEEEEHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHAAAAAAAH
HAAAAAAA...............................................................................................................H
H......................................................................................................................H
HEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE............................................................................H
HDDLLLLDDDDDDDDDDDDDDMDDDDDDDDDDDDDNNNNNNN.............................................................................H
H......................................................................................................................H
HAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...........................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
H......................................................................................................................H
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
MAAAAAAAAMAAAAAAAAMAAAAAAAMAAAAAAAAAAAMAAAAAAMMMMMMAAAAAAMMAAAAAAMMMAAAAAA......................................AAAAAAA

A fg=Indexed(245) bg=Reset mod=NONE
B fg=Indexed(60) bg=Reset mod=NONE
C fg=Indexed(75) bg=Reset mod=BOLD
D fg=White bg=Indexed(236) mod=BOLD
E fg=Indexed(179) bg=Reset mod=BOLD
F fg=Indexed(221) bg=Reset mod=BOLD
G fg=Indexed(236) bg=Reset mod=NONE
H fg=Indexed(75) bg=Reset mod=NONE
I fg=Indexed(109) bg=Reset mod=NONE
J fg=White bg=Reset mod=BOLD
K fg=Indexed(114) bg=Reset mod=NONE
L fg=White bg=Indexed(236) mod=BOLD | UNDERLINED
M fg=Black bg=Indexed(75) mod=BOLD
N fg=Indexed(245) bg=Indexed(236) mod=BOLD
