crates/ui/src/snapshots/cctop_ui__snapshot__settings_styles.snap
---
source: crates/ui/src/snapshot.rs
expression: styles(&buffer)
---
AAAAAAAAAAAAABCCCCCCCCCCCBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBDDDDDDDDDD
BEEEEEEEEEEBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
BCCCCCCCCCCCFFFFFFFFFFFFF..............................G..CCCCCCCCCCHHHHHHIIIAHHHHHHHHHHHHHHHAAAAAIIIIIIIIIIIIIIIIIAAAAB
BCCCCCCCCCCCFFFFFFFFFFFFF..............................G..CCCCCCCCCCJAAAKKKKKKAAAAAAAAAAA..............................B
BCCCCCCCCCCCFFFFFFFFFFFFF..............................G..CCCCCCCCCCJJJJJJJ...................G........................B
BCCCCCCCCCCCFFFFFFFFFFFFFAAAAAAAAAAAAAAAAAAAA.............CCCCCCCCCCJJJJJJAAAAAAAAAAAAAAAAAAAAAA.......................B
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
HEEEEEEEEEEHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHAAAAAAAAAAH
HAAAAAAA...............................................................................................................H
H......................................................................................................................H
HEEEEEEEEEEEEEEEEEEEEEEEE..............................................................................................H
HDDDDDDDDDDDDDDDDDDDDLLLLLLLLLLLLLLMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM.....................................H
H....................NNNNNNNNNNNNNNAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA....................................H
H....................OOOOOOOOOOOOOOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...........................H
H....................PPPPPPPPPPPPPPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA................................H
H....................QQQQQQQQQQQQQQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA.............................................H
H....................PPPPPPPPPPPPPPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA............................................H
H....................PPPPPPPPPPPPPPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA.......................................H
H....................PPPPPPPPPPPPPPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...............................................H
H....................PPPPPPPPPPPPPPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA.................................H
H....................PPPPPPPPPPPPPPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA....................................H
H....................PPPPPPPPPPPPPPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA.....................H
H....................RRRRRRRRRRRRRRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...............................H
H....................SSSSSSSSSSSSSSAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA.............................H
H....................RRRRRRRRRRRRRRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA......................H
H....................PPPPPPPPPPPPPPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...............................H
H....................QQQQQQQQQQQQQQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA..............................H
H....................QQQQQQQQQQQQQQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA..........................H
H....................QQQQQQQQQQQQQQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...........H
H......................................................................................................................H
HEEEEEEEEEEEEEEEEE.....................................................................................................H
H....................RRRRRRRRRRRRRRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...............................H
H....................RRRRRRRRRRRRRRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA...................................................H
H....................TTTTTTTTTTTTTTAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA..............................................H
H....................PPPPPPPPPPPPPPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA....................................H
H....................UUUUUUUUUUUUUUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA................................................H
H....................RRRRRRRRRRRRRRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA..............................................H
H....................RRRRRRRRRRRRRRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA................................................H
HAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH
VAAAAAAAAVAAAAAAAAVAAAAAAAVAAAAAAAAAAAVAAAAAAVVVVVVAAAAAAVVAAAAAAVVVAAAAAA......................................AAAAAAA

A fg=Indexed(245) bg=Reset mod=NONE
B fg=Indexed(60) bg=Reset mod=NONE
C fg=Indexed(75) bg=Reset mod=BOLD
D fg=White bg=Indexed(236) mod=BOLD
E fg=Indexed(179) bg=Reset mod=BOLD
F fg=Indexed(221) bg=Reset mod=BOLD
G fg=Indexed(236) bg=Reset mod=NONE
H fg=Indexed(75) bg=Reset mod=NONE
I fg=Indexed(109) bg=Reset mod=NONE
J fg=White bg=Reset mod=BOLD
K fg=Indexed(114) bg=Reset mod=NONE
L fg=Indexed(220) bg=Indexed(236) mod=BOLD
M fg=Indexed(245) bg=Indexed(236) mod=BOLD
N fg=Indexed(40) bg=Indexed(237) mod=BOLD
O fg=Indexed(40) bg=Reset mod=NONE
P fg=Indexed(134) bg=Reset mod=NONE
Q fg=Indexed(220) bg=Reset mod=NONE
R fg=Indexed(160) bg=Reset mod=NONE
S fg=Indexed(134) bg=Indexed(237) mod=BOLD
T fg=Indexed(44) bg=Reset mod=NONE
U fg=Indexed(44) bg=Indexed(237) mod=BOLD
V fg=Black bg=Indexed(75) mod=BOLD
