crates/ui/src/snapshots/cctop_ui__snapshot__share_address_120x40.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04        ╭ Open this terminal elsewhere ────────────────────────╮s-4-1 68% claude-sonnet-4-5 32%│
│Today             $8.97        │ web                                                  │h                              │
│This month        $0.00        │                                                      │      ⡀                        │
│All time         $28.51 $0.00/d│                                                      │2.3K out                       │
╰───────────────────────────────│                                                      │───────────────────────────────╯
╭ Sessions (4) ─────────────────│        █▀▀▀▀▀█ ▄▀ ▄█▄██ █▄▀▀█▄█▄▀▄█▀ █▀▀▀▀▀█         │───────────────────────────────╮
│   LAST▲    DUR         $    CT│        █ ███ █ ▀███▀▀ ▄ █ ▄█ ██  █▄  █ ███ █         │ROFILE   BRANCH       PROJECT  │
│●    now     1h    $18.42   ▓▓9│        █ ▀▀▀ █ █▄ ▄ ▀▀ ▀  ▄▄▄ ▀ ▀ ██ █ ▀▀▀ █         │         ─            Fix the …│
│●     7m     2h     $2.87   ▓░2│        ▀▀▀▀▀▀▀ █▄▀ █▄▀▄█▄▀▄█▄▀ █ █ █ ▀▀▀▀▀▀▀         │         ─            api      │
│○     3h     1h     $0.19      │        ▀█▄█▄▄▀█  █▄ ▄▄▄▀ ▀  ▀  ▀██ ▀▄█▀▀▄█▀▄         │         ─            docs     │
│○     2d    12h     $7.03      │        ▀ ▄█▀ ▀▄▄▀▄  █▄▀  ▀█ ▄█▄ ▄▀ ██▀▀ ▄▀▄█         │         ─            infra    │
│                               │        ▀ ▄██▄▀█ ▄▀▄█ ▀▄█ ▀▄██  ▄▀▄▀█▀█     █         │                               │
│                               │        ▀ ▄█▀▀▀▀█▀▄ ██▀▄ █   ▄▀███▄▄▄█ █▀█ ▄▀         │                               │
│                               │        █▀▀ ▄▀▀▀▄▀▄▀ ▄▄ ▄ ▄▀ ▀▀▄▄ ▀▀▄▀█ ▄ █▄█         │                               │
│                               │        ▀▄▀██▄▀ ▀ ▀▄  █ ▀█   ▄▄  ▀▀   ▀▄▀▀▄█▀         │                               │
│                               │        ▀▄▀ ▄▀▀███▀███▀▄▄   ▄█ ▀▄▀ ▀█▄█▀▀   █         │                               │
│                               │        █ ▄▄██▀▄ █▀██▄█ ▄▀▀██▄█ ▄▄  ▀█ ▄▄ ▀▀▀         │                               │
│                               │        ▀ █▀██▀▄█▄██ ▀ ▄▀▀ ██▀█ ██▀ ▀▀██ ▄ ▀█         │                               │
│                               │        ▀▄ █▄█▀█▄▀▀█ █▄ ███ ▀█ ████ ██▀▀ ▀▀▄▀         │                               │
│                               │        ▀▀▀▀  ▀▀▄▀▄ █▄▄ ▀  ▀ █▀▄▄▄▄██▀▀▀███ ▄         │                               │
╰───────────────────────────────│        █▀▀▀▀▀█ ▀▄▄▀█   ▀▄▀▄▄█▀▄▄▀ ██ ▀ █▄█▀▀         │───────────────────────────────╯
╭ Info  Performance  Processes  │        █ ███ █ ▄▄▄▄▀█▀ ▀▄ ▀ ▀  ▀▀▀ ▀▀▀██ ▄▄▀         │  ─────────────────────────────╮
│Root /usr/bin/claude --model op│        █ ▀▀▀ █ ▄██▄██  ▄▀ █ ██ ▀█▀█▄▄▄▄█▀ ▀▀         │                               │
│    PID    CPU%       MEM  COMM│        ▀▀▀▀▀▀▀ ▀▀  ▀▀    ▀▀▀▀ ▀ ▀ ▀▀ ▀▀▀▀ ▀▀         │                               │
│   4101    9.8%    360.0M  clau│                                                      │                               │
│   4188    2.4%     44.0M  node│                                                      │                               │
│   4290    0.3%      8.0M  bash│                                                      │                               │
│                               │ Pairing code 482913 — asked for once the link opens. │                               │
│                               │ Whoever holds this link can type at the agent.       │                               │
│                               │ It is on your clipboard as well.                     │                               │
│                               │                                                      │                               │
│                               │ Address  fix-tests.example.com                       │                               │
│                               │ e or right-click to choose another                   │                               │
╰───────────────────────────────│                                                      │───────────────────────────────╯
╭ Limits ───────────────────────│  [any key] dismiss                                   │──────────────────── + account ╮
│Claude checking…               ╰──────────────────────────────────────────────────────╯                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help t New tab Tab Panel S Sort q Quit                ⧉ share
