crates/ui/src/snapshots/cctop_ui__snapshot__share_address_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰───────────╭ Open this terminal elsewhere ────────────────────────╮───────────╯
╭ Sessions (│ web                                                  │───────────╮
│   LAST▲   │                                                      │PROJECT    │
│●    now   │ No room here for a QR code — try a taller terminal.  │Fix the ch…┃
│●     7m   │ Pairing code 482913 — asked for once the link opens. │api        │
╰───────────│ Whoever holds this link can type at the agent.       │───────────╯
╭ Info  Perf│ It is on your clipboard as well.                     │ig  Context╮
│Root /usr/b│                                                      │           │
│    PID    │ Address  fix-tests.example.com                       │           │
│   4101    │ e or right-click to choose another                   │           │
│   4188    │                                                      │           │
│   4290    │  [any key] dismiss                                   │           │
│           ╰──────────────────────────────────────────────────────╯           │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
